@@ -1,7 +1,9 @@
 Revision history for Perl extension 'again'.
 
 0.03 2013-02-23
-    - reformatted this file to confirm to CPAN::Changes::Spec
+    - added section to doc explaining you will need to re-import any
+      symbols you imported on first use.
+    - reformatted Changes to conform to CPAN::Changes::Spec
 
 0.02 2003-08-07
     - Added /g. again.pm didn't work with module names that have more than
